--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="css/animate.css">
+
     <title>coffee_page_vue</title>
   </head>
   <body>
@@ -14,4 +16,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script>
+  </script>
 </html>
